# MOBI_QC

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  search.js
APP_NAME/: algorithms.html
src/: ECG_qc.ipynb  ET_check.ipynb  ET_hists_resting.ipynb  LSL_ET_plot.ipynb  LSL_problem.ipynb  LSL_problem_one_pt.ipynb  mic.ipynb  report.py  respiration_clean.ipynb  stream_durations.ipynb
src/APP_NAME/: ECG_qc.ipynb  algorithms.py
src/MOBI_QC/: Behavior_qc.ipynb  ECG_qc.ipynb  EDA_qc.ipynb  ET_check.ipynb  ET_hists.ipynb  ET_qc.ipynb  LSL_problem.ipynb  LSL_problem_one_pt.ipynb  MIC_qc.ipynb  RSP_qc.ipynb  __init__.py  algorithms.py  behavior_qc.py  ecg_qc.py  eda_qc.py  eeg.py  eeg_explore.py  eeg_qc_notebook.ipynb  et_qc.py  eyetracking  lsl_problem.py  mic.ipynb  mic_qc.py  report.ipynb  respiration.ipynb  rsp_qc.py  stream_durations.ipynb  test.ipynb  test_doc_for_learning.txt  test_et.ipynb  utils.py  webcam_qc.py  yourmom.txt
src/MOBI_QC/files_to_ignore/: ET_hists.ipynb  ET_hists_resting.ipynb  LSL_ET_plot.ipynb  LSL_problem_multiple_pts.ipynb  LSL_problem_one_pt_old.ipynb  LSL_start_times.ipynb
tests/: test_fibonacci.py
