[tool.poetry]
name = "MOBI_QC"
version = "0.1.0"
description = "mobi qc"
authors = ["BryanGonzalez262 <bsg262@gmail.com>"]
license = "GNU Lesser General Public License v3.0"
readme = "README.md"
packages = [{include = "MOBI_QC", from = "src"}]

[tool.poetry.dependencies]
python = "~3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
mypy = "^1.15.0"
pre-commit = "^4.2.0"
pytest-cov = "^6.0.0"
ruff = "^0.11.2"

[tool.poetry.group.docs.dependencies]
pdoc = "^15.0.1"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "tests"
]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = []

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
